# Helios

./: .env.example  .gitignore  Helios-introduction.txt  LICENSE  README.md  docker-compose.yml  pyproject.toml
helios_cli/: README.md  main.py  requirements.txt
helios_server/: Dockerfile  README.md  requirements.txt  run_server.sh  run_worker.sh  worker.py
helios_server/app/: main.py
helios_server/app/api/: models.py  tasks.py
helios_server/app/core/: config.py  constants.py  redis.py
helios_server/app/websocket/: manager.py
helios_server/app/worker/: tasks.py
test_project/: main.py  requirements.txt
test_simple/: hello.py  requirements.txt
